# tracking-face

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/face_match/: cli.py  core.py  search.py
tests/: test_core.py  test_search.py
